Doc not creating

--- a/app/views/docs/_form.html.erb
+++ b/app/views/docs/_form.html.erb
@@ -1,9 +1,7 @@
 <%= form_for :@doc do |form|%>
-  <%= form.label :title%> <br>
-  <%= form.text_field :title %> <br>
+Title:    <%= form.text_field :title %> <br>
   
-  <%= form.label :content %> <br>
-  <%= form.text_field :content %> <br>
+Content:  <%= form.text_area :content %> <br>
   
   <%= form.submit %>
 
