--- a/app/views/docs/_form.html.erb
+++ b/app/views/docs/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_for :@doc do |form|%>
+<%= form_with(model: @doc) do |form|%>
 Title:    <%= form.text_field :title %> <br>
   
 Content:  <%= form.text_area :content %> <br>
   
-  <%= form.submit %>
+  <%= form.button  %>
 
 
 <% end %>
