--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Welcome#index</h1>
 <p>This is welcome index page. You are welcome. </p>
+
+
+<%= link_to "New doc", new_doc_path%>
+<%= link_to "All doc", docs_path%>
