--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -1,7 +1,7 @@
 <h1>This is index Doc</h1>
 
 <% @docs.each do |doc| %>
-  <h1>title: <%= link_to doc.title  %></h1>
+  <h1>title: <%= link_to doc.title, doc  %></h1>
   <p><%= time_ago_in_words(doc.created_at)%></p>
   <p>Content: <%= doc.content%></p>
 
