--- a/app/views/docs/show.html.erb
+++ b/app/views/docs/show.html.erb
@@ -5,4 +5,6 @@
 <%= link_to "All Doc", docs_path %> <br>
 <%= link_to "New Doc", new_doc_path %>
 <%= link_to "Edit Doc", edit_doc_path(@doc) %>
-<%= link_to "Delete", doc_path(@doc), method: :delete, data: { confirm: "Are you sure?"} %>
+
+
+<%= button_to("Delete", doc_path, form: { data: { turbo_confirm: "Are you sure?" } },  method: :delete ) %>
