--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+ @import "normalize";
+ @import "global.css.scss";
+ @import "doc.css.scss";
+ @import "welcome.css.scss";
